--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.7",
-    "mongoose-auto-increment": "^5.0.1",
+    "mongoose-sequence": "^5.3.1",
     "save": "^2.4.0"
   }
 }
