--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mongoose": "^5.12.7",
     "mongoose-sequence": "^5.3.1",
     "save": "^2.4.0"
+  },
+  "devDependencies": {
+    "k6": "*"
   }
 }
