--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,11 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Pem file
+./sdcQa.pem
+
+# CSV files
+./questions.csv
+./answers.csv
+./answers_photos.csv
